Fix Google OAuth in iframe by adding sandbox permissions

--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,8 @@
     <iframe 
       id="app-frame" 
       src="https://biggrade0.base44.app"
-      allow="camera; microphone; clipboard-read; clipboard-write; fullscreen; payment; geolocation; *"
+      sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox allow-forms allow-top-navigation-by-user-activation"
+      allow="camera; microphone; clipboard-read; clipboard-write; fullscreen; payment; geolocation"
       style="display: none;"
     ></iframe>
     
